Upgrades via channels
alpha-1 points to CSV v0.0.1
alpha-2 points to CSV v0.0.2

--- a/deploy/converged/olm-catalog/kubevirt-hyperconverged/kubevirt-hyperconverged.package.yaml
+++ b/deploy/converged/olm-catalog/kubevirt-hyperconverged/kubevirt-hyperconverged.package.yaml
@@ -1,4 +1,6 @@
 packageName: kubevirt-hyperconverged
 channels:
-- name: alpha
+- name: alpha-1
+  currentCSV: kubevirt-hyperconverged-operator.v0.0.1
+- name: alpha-2
   currentCSV: kubevirt-hyperconverged-operator.v0.0.2
