Add missing replaces field in v0.0.2 CSV.

--- a/deploy/converged/olm-catalog/kubevirt-hyperconverged/0.0.2/kubevirt-hyperconverged-operator.v0.0.2.clusterserviceversion.yaml
+++ b/deploy/converged/olm-catalog/kubevirt-hyperconverged/0.0.2/kubevirt-hyperconverged-operator.v0.0.2.clusterserviceversion.yaml
@@ -88,6 +88,7 @@ spec:
     - KubeVirt
     - Virtualization
   version: 0.0.2
+  replaces: kubevirt-hyperconverged-operator.v0.0.1
   maturity: alpha
   maintainers:
     - name: KubeVirt project
